--- a/Client/WillowClient/WillowClient/Views/MainPage.xaml
+++ b/Client/WillowClient/WillowClient/Views/MainPage.xaml
@@ -52,16 +52,66 @@
             </FlexLayout>
             <!-- Middle part controls -->
             <!-- Add friend -->
-            <VerticalStackLayout Grid.Row="1" IsVisible="{Binding AddFriendSelected}" IsEnabled="{Binding AddFriendSelected}" Padding="0,20,0,0">
-                <VerticalStackLayout HeightRequest="100" WidthRequest="200" HorizontalOptions="Center">
+            <VerticalStackLayout Grid.Row="1" IsVisible="{Binding AddFriendSelected}" IsEnabled="{Binding AddFriendSelected}" Padding="0,10,0,0">
+                <VerticalStackLayout HeightRequest="100" WidthRequest="200" HorizontalOptions="Center" VerticalOptions="Start"> 
                     <Label Text="Add friend" HorizontalOptions="Center"></Label>
-                    <Entry Placeholder="Insert friend name and id"></Entry>
-                    <Button Text="Add friend" WidthRequest="200"></Button>
+                    <Entry Placeholder="Insert friend name and id" Text="{Binding AddFriendEntryText}"></Entry>
+                    <Button Text="Add friend" WidthRequest="200" Command="{Binding AddFriendCommand}"></Button>
                 </VerticalStackLayout>
+                <!-- View sent friend requests-->
+                <Label Text="Sent friend requests" TextColor="WhiteSmoke" HorizontalOptions="Center"></Label>
+                <CollectionView x:Name="sentFriendRequestsCollectionView" ItemsSource="{Binding SentFriendRequests}" SelectionMode="None">
+                    <CollectionView.ItemTemplate>
+                        <DataTemplate x:DataType="model:FriendRequestModel">
+                            <HorizontalStackLayout Padding="10" Spacing="6">
+                                <toolkit:AvatarView
+                                        HeightRequest="50"
+                                        ImageSource="https://raw.githubusercontent.com/jamesmontemagno/app-monkeys/master/baboon.jpg"
+                                        WidthRequest="50"
+                                        BorderWidth="1.3"
+                                        BorderColor="WhiteSmoke"
+                                        CornerRadius="32"
+                                        />
+                                <VerticalStackLayout Spacing="13">
+                                    <Label Text="{Binding DisplayName}" VerticalOptions="Center" TextColor="WhiteSmoke"></Label>
+                                    <Border HorizontalOptions="Start" BackgroundColor="#4CBB17" WidthRequest="16" HeightRequest="16" StrokeThickness="1.1" Stroke="#4CBB17" Margin="-15,0,0,0">
+                                        <Border.StrokeShape>
+                                            <RoundRectangle CornerRadius="10,10,10,10"/>
+                                        </Border.StrokeShape>
+                                    </Border>
+                                </VerticalStackLayout>
+                            </HorizontalStackLayout>
+                        </DataTemplate>
+                    </CollectionView.ItemTemplate>
+                </CollectionView>
             </VerticalStackLayout>
             <!-- View friend requests -->
             <VerticalStackLayout Grid.Row="1" IsEnabled="{Binding PendingSelected}" IsVisible="{Binding PendingSelected}">
                 <Label Text="Friend requests" FontSize="Medium" HorizontalOptions="Center" HorizontalTextAlignment="Center"/>
+                <CollectionView x:Name="friendRequestsCollectionView" ItemsSource="{Binding FriendRequests}" SelectionMode="None">
+                    <CollectionView.ItemTemplate>
+                        <DataTemplate x:DataType="model:FriendRequestModel">
+                            <HorizontalStackLayout Padding="10" Spacing="6">
+                                <toolkit:AvatarView
+                                        HeightRequest="50"
+                                        ImageSource="https://raw.githubusercontent.com/jamesmontemagno/app-monkeys/master/baboon.jpg"
+                                        WidthRequest="50"
+                                        BorderWidth="1.3"
+                                        BorderColor="WhiteSmoke"
+                                        CornerRadius="32"
+                                        />
+                                <VerticalStackLayout Spacing="13">
+                                    <Label Text="{Binding DisplayName}" VerticalOptions="Center" TextColor="WhiteSmoke"></Label>
+                                    <Border HorizontalOptions="Start" BackgroundColor="#4CBB17" WidthRequest="16" HeightRequest="16" StrokeThickness="1.1" Stroke="#4CBB17" Margin="-15,0,0,0">
+                                        <Border.StrokeShape>
+                                            <RoundRectangle CornerRadius="10,10,10,10"/>
+                                        </Border.StrokeShape>
+                                    </Border>
+                                </VerticalStackLayout>
+                            </HorizontalStackLayout>
+                        </DataTemplate>
+                    </CollectionView.ItemTemplate>
+                </CollectionView>
             </VerticalStackLayout>
             <!-- Create group -->
             <ScrollView Grid.Row="1" IsEnabled="{Binding CreateGroupSelected}" IsVisible="{Binding CreateGroupSelected}">
@@ -73,6 +123,11 @@
                         <CollectionView.ItemTemplate>
                             <DataTemplate x:DataType="model:FriendModel">
                                 <HorizontalStackLayout Padding="10" Spacing="6">
+                                    <!--<HorizontalStackLayout.GestureRecognizers>
+                                        <SwipeGestureRecognizer Direction="Left" Command="">
+                                            
+                                        </SwipeGestureRecognizer>
+                                    </HorizontalStackLayout.GestureRecognizers>-->
                                     <toolkit:AvatarView
                                         HeightRequest="50"
                                         ImageSource="https://raw.githubusercontent.com/jamesmontemagno/app-monkeys/master/baboon.jpg"
