The accounts can view if their friends are online or not real-time via websocket of the chat service and for faster response the status is also saved in the database and when the friends fetch happens, the status is retrieved as well. Updated the UI to show the status change.

--- a/Client/WillowClient/WillowClient/Views/ChatPage.xaml
+++ b/Client/WillowClient/WillowClient/Views/ChatPage.xaml
@@ -58,7 +58,7 @@
                 <VerticalStackLayout Spacing="5" FlexLayout.AlignSelf="Center" Margin="0,0,10,0">
                     <Label Text="{Binding Friend.DisplayName}" TextColor="WhiteSmoke"></Label>
                     <HorizontalStackLayout Spacing="10">
-                        <Label Text="Last Online:" TextColor="WhiteSmoke"/>
+                        <Label Text="{Binding LastOnlineText}" TextColor="WhiteSmoke"/>
                         <Label Text="{Binding Friend.LastOnline}" TextColor="WhiteSmoke"/>
                     </HorizontalStackLayout>
                 </VerticalStackLayout>
