--- a/Client/WillowClient/WillowClient/Views/GroupChatPage.xaml
+++ b/Client/WillowClient/WillowClient/Views/GroupChatPage.xaml
@@ -63,8 +63,8 @@
                 </VerticalStackLayout>
             </HorizontalStackLayout>
             <HorizontalStackLayout FlexLayout.AlignSelf="Center">
-                <ImageButton BackgroundColor="Transparent" BorderColor="Transparent" HeightRequest="30" WidthRequest="30" Aspect="AspectFill" FlexLayout.AlignSelf="Center" Source="call.png"/>
-                <ImageButton BackgroundColor="Transparent" BorderColor="Transparent" HeightRequest="40" WidthRequest="40" Aspect="AspectFill" FlexLayout.AlignSelf="Center" Source="video.png"/>
+                <ImageButton BackgroundColor="Transparent" BorderColor="Transparent" Padding="2" HeightRequest="40" WidthRequest="40" Aspect="AspectFill" FlexLayout.AlignSelf="Center" Source="video.png"/>
+                <ImageButton BackgroundColor="Transparent" BorderColor="Transparent" Padding="2" HeightRequest="30" WidthRequest="30" Aspect="AspectFill" FlexLayout.AlignSelf="Center" Source="call.png"/>
             </HorizontalStackLayout>
         </FlexLayout>
         <CollectionView x:Name="messageGrid" Grid.Row="1" Grid.Column="0" BackgroundColor="{AppThemeBinding Light={StaticResource PageLightBackgroundColor}, Dark={StaticResource PageDarkBackgroundColor}}" Margin="0,0,0,0" ItemTemplate="{StaticResource MessageTemplateSelector}" ItemsSource="{Binding MessageGroups}" IsGrouped="True" ItemsUpdatingScrollMode="KeepLastItemInView">
