--- a/Client/WillowClient/WillowClient/Views/GroupDetailsPage.xaml
+++ b/Client/WillowClient/WillowClient/Views/GroupDetailsPage.xaml
@@ -99,6 +99,11 @@
                     <CollectionView.ItemTemplate>
                         <DataTemplate x:DataType="model:GroupParticipantModel">
                             <Grid Padding="10,0,10,0" ColumnDefinitions="45,*" ColumnSpacing="6" Margin="0,10,0,5">
+                                <Grid.GestureRecognizers>
+                                        <TapGestureRecognizer 
+                                    Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodel:GroupDetailsViewModel}}, Path=ParticipantTapCommand}"
+                                    CommandParameter="{Binding .}"/>
+                                    </Grid.GestureRecognizers>
                                 <toolkit:AvatarView
                                         Grid.Column="0"
                                         HeightRequest="45"
