--- a/Client/WillowClient/WillowClient/Views/AddFriendPage.xaml
+++ b/Client/WillowClient/WillowClient/Views/AddFriendPage.xaml
@@ -15,58 +15,76 @@
              Title="AddFriendPage"
              Loaded="ContentPage_Loaded"
              BackgroundColor="{AppThemeBinding Light={StaticResource PageLightBackgroundColor}, Dark={StaticResource PageDarkBackgroundColor}}">
-
-    <Grid RowDefinitions="Auto,*" ColumnDefinitions="*">
-        <Border StrokeThickness="0" Grid.Row="0" HeightRequest="50" BackgroundColor="{StaticResource AccentDarkColor}">
-            <Border.StrokeShape>
-                <RoundRectangle CornerRadius="0,0,15,15" />
-            </Border.StrokeShape>
-            <Grid ColumnDefinitions="*,*,*,*" HeightRequest="50" BackgroundColor="{StaticResource AccentDarkColor}" >
-                <ImageButton Grid.Column="0" Margin="20,0,10,0" WidthRequest="24" HeightRequest="24" BorderColor="Transparent" HorizontalOptions="Start" Command="{Binding ExitAddFriendCommand}">
-                    <ImageButton.Source>
-                        <FontImageSource FontFamily="FASolid" Glyph="{x:Static fa:Solid.ArrowLeft}" Color="WhiteSmoke"/>
-                    </ImageButton.Source>
-                </ImageButton>
-                <Label FontFamily="{StaticResource ApplicationFont}" Grid.Column="1" Grid.ColumnSpan="2" Text="Find new friends" FontSize="16" TextColor="WhiteSmoke" FontAttributes="Bold" VerticalOptions="Center" VerticalTextAlignment="Center" HorizontalOptions="Center" HorizontalTextAlignment="Center"/>
-            </Grid>
-        </Border>
-        <VerticalStackLayout Grid.Row="1" Grid.Column="0" HorizontalOptions="Center" VerticalOptions="Start">
-            <input:FormView Padding="5" SubmitCommand="{Binding AddFriendCommand}">
-                <Grid ColumnDefinitions="*, Auto" ColumnSpacing="10">
-                    <material:TextField Grid.Row="0" Grid.Column="0" x:Name="entryAddFriend" FontFamily="{StaticResource ApplicationFont}" Title="Username and id" Icon="{FontImageSource FontFamily=FASolid, Glyph={x:Static fa:Solid.User}}" Text="{Binding AddFriendEntryText}" AccentColor="{StaticResource AccentSecondDarkColor}" AllowClear="True">
-                        <!--<validation:RequiredValidation/>-->
-                    </material:TextField>
-                    <!--<Entry FontFamily="{StaticResource ApplicationFont}" Placeholder="Insert friend name and id" Text="{Binding AddFriendEntryText}"/>-->
-                    <ImageButton input:FormView.IsSubmitButton="True" Grid.Row="0" Padding="8" VerticalOptions="Center" CornerRadius="5" Grid.Column="1" BackgroundColor="{StaticResource AccentDarkColor}" WidthRequest="60">
+    <ContentPage.Resources>
+        <Style TargetType="HorizontalStackLayout">
+            <Setter Property="VisualStateManager.VisualStateGroups">
+                <VisualStateGroupList>
+                    <VisualStateGroup x:Name="CommonStates">
+                        <VisualState x:Name="Normal" />
+                        <VisualState x:Name="Selected">
+                            <VisualState.Setters>
+                                <Setter Property="BackgroundColor"
+                                        Value="{StaticResource AccentDarkColor}" />
+                            </VisualState.Setters>
+                        </VisualState>
+                    </VisualStateGroup>
+                </VisualStateGroupList>
+            </Setter>
+        </Style>
+    </ContentPage.Resources>
+    <ScrollView>
+        <Grid RowDefinitions="Auto,*" ColumnDefinitions="*">
+            <Border StrokeThickness="0" Grid.Row="0" HeightRequest="50" BackgroundColor="{StaticResource AccentDarkColor}">
+                <Border.StrokeShape>
+                    <RoundRectangle CornerRadius="0,0,15,15" />
+                </Border.StrokeShape>
+                <Grid ColumnDefinitions="*,*,*,*" HeightRequest="50" BackgroundColor="{StaticResource AccentDarkColor}" >
+                    <ImageButton Grid.Column="0" Margin="20,0,10,0" WidthRequest="24" HeightRequest="24" BorderColor="Transparent" HorizontalOptions="Start" Command="{Binding ExitAddFriendCommand}">
                         <ImageButton.Source>
-                            <FontImageSource FontFamily="FASolid" Glyph="{x:Static fa:Regular.Plus}" Color="WhiteSmoke" Size="18" />
+                            <FontImageSource FontFamily="FASolid" Glyph="{x:Static fa:Solid.ArrowLeft}" Color="WhiteSmoke"/>
                         </ImageButton.Source>
                     </ImageButton>
+                    <Label FontFamily="{StaticResource ApplicationFont}" Grid.Column="1" Grid.ColumnSpan="2" Text="Find new friends" FontSize="16" TextColor="WhiteSmoke" FontAttributes="Bold" VerticalOptions="Center" VerticalTextAlignment="Center" HorizontalOptions="Center" HorizontalTextAlignment="Center"/>
                 </Grid>
-            </input:FormView>
-            <material:TextField x:Name="searchRecommendations" Title="Search recommendations" FontFamily="{StaticResource ApplicationFont}" AccentColor="{StaticResource AccentSecondDarkColor}" Icon="{FontImageSource FontFamily=FASolid, Glyph={x:Static fa:Solid.MagnifyingGlass}}" Margin="5" />
-            <CollectionView ItemsSource="{Binding FriendRecommendations}">
-                <CollectionView.ItemTemplate>
-                    <DataTemplate x:DataType="model:FriendRecommendationModel">
-                        <HorizontalStackLayout Padding="10" Spacing="6">
-                            <toolkit:AvatarView
-                                        HeightRequest="50"
-                                        ImageSource="{Binding ProfilePictureUrl}"
-                                        WidthRequest="50"
-                                        BorderWidth="0"
-                                        BorderColor="WhiteSmoke"
-                                        CornerRadius="32"
-                                        BackgroundColor="Transparent"
-                                        />
-                            <VerticalStackLayout Spacing="5">
-                                <Label FontFamily="{StaticResource ApplicationFont}" Text="{Binding DisplayName}" FontSize="14" FontAttributes="Bold" VerticalOptions="Center" TextColor="WhiteSmoke"/>
-                                <Label FontFamily="{StaticResource ApplicationFont}" Text="{Binding JoinDate}" VerticalOptions="Center" TextColor="WhiteSmoke"/>
-                            </VerticalStackLayout>
-                        </HorizontalStackLayout>
-                    </DataTemplate>
-                </CollectionView.ItemTemplate>
-            </CollectionView>
-            <Button FontFamily="{StaticResource ApplicationFont}" Margin="20,10,20,0" Text="Send friend requests" TextColor="WhiteSmoke" BackgroundColor="{StaticResource AccentDarkColor}"></Button>
-        </VerticalStackLayout>
-    </Grid>
+            </Border>
+            <VerticalStackLayout Grid.Row="1" Grid.Column="0" HorizontalOptions="Center" VerticalOptions="Start">
+                <input:FormView Padding="5" SubmitCommand="{Binding AddFriendCommand}">
+                    <Grid ColumnDefinitions="*, Auto" ColumnSpacing="10">
+                        <material:TextField Grid.Row="0" Grid.Column="0" x:Name="entryAddFriend" FontFamily="{StaticResource ApplicationFont}" Title="Username and id" Icon="{FontImageSource FontFamily=FASolid, Glyph={x:Static fa:Solid.User}}" Text="{Binding AddFriendEntryText}" AccentColor="{StaticResource AccentSecondDarkColor}" AllowClear="True">
+                            <!--<validation:RequiredValidation/>-->
+                        </material:TextField>
+                        <!--<Entry FontFamily="{StaticResource ApplicationFont}" Placeholder="Insert friend name and id" Text="{Binding AddFriendEntryText}"/>-->
+                        <ImageButton input:FormView.IsSubmitButton="True" Grid.Row="0" Padding="8" VerticalOptions="Center" CornerRadius="5" Grid.Column="1" BackgroundColor="{StaticResource AccentDarkColor}" WidthRequest="60">
+                            <ImageButton.Source>
+                                <FontImageSource FontFamily="FASolid" Glyph="{x:Static fa:Regular.Plus}" Color="WhiteSmoke" Size="18" />
+                            </ImageButton.Source>
+                        </ImageButton>
+                    </Grid>
+                </input:FormView>
+                <material:TextField x:Name="searchRecommendations" Title="Search recommendations" FontFamily="{StaticResource ApplicationFont}" AccentColor="{StaticResource AccentSecondDarkColor}" Icon="{FontImageSource FontFamily=FASolid, Glyph={x:Static fa:Solid.MagnifyingGlass}}" Margin="5" />
+                <CollectionView ItemsSource="{Binding FriendRecommendations}" SelectionMode="Multiple">
+                    <CollectionView.ItemTemplate>
+                        <DataTemplate x:DataType="model:FriendRecommendationModel">
+                            <HorizontalStackLayout Padding="10" Spacing="6">
+                                <toolkit:AvatarView
+                                            HeightRequest="50"
+                                            ImageSource="{Binding ProfilePictureUrl}"
+                                            WidthRequest="50"
+                                            BorderWidth="0"
+                                            BorderColor="WhiteSmoke"
+                                            CornerRadius="32"
+                                            BackgroundColor="Transparent"
+                                            />
+                                <VerticalStackLayout Spacing="5">
+                                    <Label FontFamily="{StaticResource ApplicationFont}" Text="{Binding DisplayName}" FontSize="14" FontAttributes="Bold" VerticalOptions="Center" TextColor="WhiteSmoke"/>
+                                    <Label FontFamily="{StaticResource ApplicationFont}" Text="{Binding JoinDate}" VerticalOptions="Center" TextColor="WhiteSmoke"/>
+                                </VerticalStackLayout>
+                            </HorizontalStackLayout>
+                        </DataTemplate>
+                    </CollectionView.ItemTemplate>
+                </CollectionView>
+                <Button FontFamily="{StaticResource ApplicationFont}" Margin="20,10,20,0" Text="Send friend requests" TextColor="WhiteSmoke" BackgroundColor="{StaticResource AccentDarkColor}"></Button>
+            </VerticalStackLayout>
+        </Grid>
+    </ScrollView>
 </ContentPage>
