--- a/Services/SignalingService/src/public/css/group.css
+++ b/Services/SignalingService/src/public/css/group.css
@@ -13,8 +13,6 @@ body{
     padding: 0;
 }
 
-
-
 .remote-videos-container {
     width: 100%;
     display: flex;
@@ -105,4 +103,29 @@ body{
     left: 79%;
     border: 2px solid whitesmoke;
     border-radius: 20px;
+}
+
+.buttonsDiv{
+    position: absolute;
+    z-index: 10;
+    top: 90%;
+    left: 20%;
+    right: 20%;
+    bottom: 20px;
+    padding: 0;
+    margin-right: 10%;
+    width: 60%;
+    height: 10%;
+    background-color: transparent;
+    /*border: 1px solid whitesmoke;*/
+    border-radius: 30px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
+.buttonsDiv > div {
+    margin-left: 30px;
+    margin-right: 30px;
 }
