--- a/Services/SignalingService/src/templates/group.html
+++ b/Services/SignalingService/src/templates/group.html
@@ -15,6 +15,9 @@
         <!-- Import script containing WebRTC related functions -->
         <script src="js/group.js" defer></script>
 
+        <!-- Font awesome icons -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+
         <!-- Import style sheet -->
         <link rel="stylesheet" href="css/group.css">
     </head>
@@ -24,6 +27,16 @@
         </div>
         <video id="localVideo" class="local-video" autoplay muted playsinline></video>
         <img id="localImage" class="local-image" src="images/user.png" hidden></image>
+
+        <!-- Buttons ui -->
+        <div class="buttonsDiv">
+            <div id="microphone_button" onclick="toggleMicrophone();">
+                <i class="fa fa-microphone" style="font-size: 30px; color: whitesmoke;" ></i>
+            </div>
+            <div id="camera_button" onclick="toggleCamera();">
+                <i class="fa fa-video" style="font-size: 30px; color: whitesmoke;"></i>
+            </div>
+        </div>
 
         <h2 id="roomID" hidden>{{.RoomID}}</h2>
         <h2 id="accountID" hidden>{{.AccountID}}</h2>
