--- a/Client/WillowClient/WillowClient/Views/MobileSettingsPage.xaml
+++ b/Client/WillowClient/WillowClient/Views/MobileSettingsPage.xaml
@@ -105,7 +105,7 @@
                 </Frame>
                 <Label FontFamily="{StaticResource ApplicationFont}" HorizontalOptions="Start" Grid.Column="1" Margin="10,0,0,0" Text="Dark mode" TextColor="WhiteSmoke" VerticalOptions="Center" VerticalTextAlignment="Center" FontSize="14" FontAttributes="Bold"/>
             </HorizontalStackLayout>
-            <Switch HorizontalOptions="End" Grid.Column="1" WidthRequest="64" HeightRequest="32" OnColor="{StaticResource AccentSecondDarkColor}" ThumbColor="WhiteSmoke"/>
+            <Switch IsToggled="True" HorizontalOptions="End" Grid.Column="1" WidthRequest="64" HeightRequest="32" OnColor="{StaticResource AccentSecondDarkColor}" ThumbColor="WhiteSmoke"/>
         </Grid>
         <Frame BackgroundColor="#505050" Margin="0,10,0,0" HeightRequest="24">
             <Label FontFamily="{StaticResource ApplicationFont}" HeightRequest="18" Text="Feedback" TextTransform="Uppercase" TextColor="WhiteSmoke" HorizontalOptions="Start" HorizontalTextAlignment="Center" FontAttributes="Bold"/>
